Bug 1671574 - Add temporary suppression for StartupCache thread leak. r=Gankro

Depends on D94286

Differential Revision: https://phabricator.services.mozilla.com/D94287